modified colors, setup script, now using more user packages instead of system

--- a/home-manager/Gnome-topbar-le-dots/Gnome-shell.css
+++ b/home-manager/Gnome-topbar-le-dots/Gnome-shell.css
@@ -63,7 +63,7 @@ color: #000000;
 
 .popup-menu-item:hover{
   background-color: #eb6f92;
-  color: #eb6f92;
+  color: #ffffff;
 }
 
 .popup-menu-item:active{
