Removed a package, tweaked colors

--- a/home-manager/Gnome-topbar-le-dots/Gnome-shell.css
+++ b/home-manager/Gnome-topbar-le-dots/Gnome-shell.css
@@ -32,12 +32,12 @@ color: #e0def4;
 .panel-button:hover,
 .panel-button:hover .clock{
 color: #000000;
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
 }
 .panel-button:active,
-.panel-button:overview, /* #c4a7e7 activites */
+.panel-button:overview, /* #fdfdfd activites */
 .panel-button:active .clock{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #000000;
 }
 /* clock fix */
@@ -62,21 +62,21 @@ color: #000000;
 }
 
 .popup-menu-item:hover{
-  background-color: #eb6f92;
+  background-color: #4d4d4d;
   color: #ffffff;
 }
 
 .popup-menu-item:active{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 .popup-sub-menu{
-background-color: #eb6f92;
+background-color: #4d4d4d;
   color: black;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
 }
 .popup-sub-menu .popup-menu-item{
-background-color: #eb6f92;
+background-color: #4d4d4d;
   color: black;
   box-shadow: none;
 }
@@ -95,25 +95,25 @@ background-color: #eb6f92;
 color: #f0ead2;
 border-radius: 10px; }
 .calendar-month-label{
-  color: #eb6f92;
+  color: #4d4d4d;
   }
 .calendar-day-base:hover,
 .calendar-day-base:focus,
 .calendar-day-base:active:hover,
 .calendar-day-base:selected:hover{
-  background-color: #eb6f92;
+  background-color: #4d4d4d;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
 }
 .calendar-day-base:active,
 .calendar-day-base:selected{
   
-  background-color: #d2869b;
+  background-color: #4d4d4d;
   color: black;
 }
 .calendar-today,
 .calendar-today:selected{
-  box-shadow: inset 0 0 0 2px #c4a7e7;
-  background-color: #c4a7e7;
+  box-shadow: inset 0 0 0 2px #fdfdfd;
+  background-color: #fdfdfd;
   
 }
 .calendar-day-with-events{ font-weight: 800; }
@@ -134,7 +134,7 @@ color: #f0ead2;
 .events-button:active,
 .world-clock-button:active,
 .weather-button:active{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 
@@ -218,7 +218,7 @@ border-radius: 12px; }
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
 }
 .quick-slider .icon-button:active{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 .quick-toggle-menu{
@@ -234,13 +234,13 @@ color: #f0ead2;
   
 }
 .notification-button{
-background-color: #c4a7e7;
+background-color: #fdfdfd;
   border-radius: 10px !important;
   margin: 6px !important;
  
 }
 .notification-button:active{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 
@@ -250,7 +250,7 @@ background-color: #c4a7e7;
   -barlevel-height: 16px;
   -barlevel-background-color: #595959;
   /* fill */
-  -barlevel-active-background-color: #c4a7e7;
+  -barlevel-active-background-color: #fdfdfd;
   /* overfill */
   -barlevel-overdrive-color: #bb6271;
   -barlevel-overdrive-separator-width: 2px;
@@ -267,7 +267,7 @@ background-color: #c4a7e7;
   background-size: cover;
 }
 .workspace-thumbnail-indicator {
-  border-color: #c4a7e7;
+  border-color: #fdfdfd;
   border-width: 3px;
   border-radius: 12px;
 }
@@ -281,7 +281,7 @@ background-color: #c4a7e7;
 }
 .app-well-app.app-folder:active .overview-icon,
 .app-well-app:active .overview-icon{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 
@@ -308,7 +308,7 @@ background-color: #c4a7e7;
 .show-apps:checked .overview-icon,
 #dash .app-well-app:active .overview-icon{
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 
@@ -321,7 +321,7 @@ background-color: #c4a7e7;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
 }
 .edit-folder-button:active{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 
@@ -331,8 +331,8 @@ StEntry{
   border: 1px solid rgba(255, 255, 255, 0.03);
 }
 StEntry:hover, StEntry:focus, StEntry:active{
-  border: 1px solid #c4a7e7;
-  box-shadow: inset 0 0 0 1px #c4a7e7;
+  border: 1px solid #fdfdfd;
+  box-shadow: inset 0 0 0 1px #fdfdfd;
 }
 
 .search-section-content{
@@ -346,7 +346,7 @@ StEntry:hover, StEntry:focus, StEntry:active{
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
 }
 .list-search-result:active, .search-provider-icon:active{
-  background-color:#c4a7e7;
+  background-color:#fdfdfd;
   color: #ffffff;
 }
 
@@ -379,15 +379,15 @@ StEntry:hover, StEntry:focus, StEntry:active{
   margin: 12px !important;
   border-radius: 10px !important;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
-  background-color: #eb6f92;
+  background-color: #4d4d4d;
   
 }
 .modal-dialog-linked-button:focus{
-  box-shadow: inset 0 0 0 2px #c4a7e7;
-  background-color: #c4a7e7;
+  box-shadow: inset 0 0 0 2px #fdfdfd;
+  background-color: #fdfdfd;
 }
 .modal-dialog-linked-button:active{
-  background-color: #c4a7e7;
+  background-color: #fdfdfd;
   color: #ffffff;
 }
 .nm-dialog-scroll-view{
@@ -427,7 +427,7 @@ StEntry:hover, StEntry:focus, StEntry:active{
   
   .window-caption {
   spacing: 20px;
-  color: #c4a7e7;
+  color: #fdfdfd;
   background-color: #191724;
   border: 1px solid #1b1c24;
   padding: 4px 8px; }
@@ -451,40 +451,40 @@ StEntry:hover, StEntry:focus, StEntry:active{
 
 .icon-button:active{ 
 color: #191724;
-background-color: #eb6f92; }
+background-color: #4d4d4d; }
 
 
 
 .quick-toggle:checked{ 
 color: #191724;
-background-color: #eb6f92; }
+background-color: #707070; }
 
 
 
 .quick-slider .icon-button:active{
 color: #191724;
-background-color: #ed8796; }
+background-color: #707070; }
 
 
 .icon-button{
-  background-color: #e78284;
+  background-color: #707070;
 }
-.icon-button:hover{ background-color: #d2869b; }
+.icon-button:hover{ background-color: #4d4d4d; }
 
 
 
 
 .quick-slider .icon-button:hover{ 
-  background-color: #e78284;
+  background-color: #707070;
   color: white;
 }
 
 .quick-toggle-menu{
  
-  background-color: #e78284;
+  background-color: #707070;
   color: white;
 }
-.quick-toggle-menu .header .icon{ background-color: #d2869b; box-shadow: inset 0 0 0 2px black; }
+.quick-toggle-menu .header .icon{ background-color: #4d4d4d; box-shadow: inset 0 0 0 2px black; }
 
 
 
