--- a/home-manager/Gnome-topbar-le-dots/Gnome-shell.css
+++ b/home-manager/Gnome-topbar-le-dots/Gnome-shell.css
@@ -19,7 +19,7 @@
 .panel-button,
 .clock,
 .clock-display StIcon{
-color: #e0def4;
+color: #ffffff;
   border-radius: 14px;
   border: 3px solid transparent;
   background-color: #191724;
@@ -32,12 +32,12 @@ color: #e0def4;
 .panel-button:hover,
 .panel-button:hover .clock{
 color: #000000;
-  background-color: #fdfdfd;
+  background-color: #707070;
 }
 .panel-button:active,
-.panel-button:overview, /* #fdfdfd activites */
+.panel-button:overview, /* #707070 activites */
 .panel-button:active .clock{
-  background-color: #fdfdfd;
+  background-color: #707070;
   color: #000000;
 }
 /* clock fix */
@@ -95,7 +95,7 @@ background-color: #4d4d4d;
 color: #f0ead2;
 border-radius: 10px; }
 .calendar-month-label{
-  color: #4d4d4d;
+  color: #fdfdfd;
   }
 .calendar-day-base:hover,
 .calendar-day-base:focus,
@@ -112,21 +112,21 @@ border-radius: 10px; }
 }
 .calendar-today,
 .calendar-today:selected{
-  box-shadow: inset 0 0 0 2px #fdfdfd;
-  background-color: #fdfdfd;
+  box-shadow: inset 0 0 0 2px #4d4d4d;
+  background-color: #4d4d4d;
   
 }
 .calendar-day-with-events{ font-weight: 800; }
 /* events */
 .calendar{
   border-radius: 11px;
-  background-color: #27243A;
+  background-color: #595959;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03) !important;
 }
 .events-button,
 .world-clocks-button,
 .weather-button{
-background-color: #27243A;
+background-color: #595959;
 color: #f0ead2;
   border-radius: 11px;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.03);
